force-app/main/default/objects/Sales_Forcast__c/Sales_Forcast__c.object-meta.xml
<CustomObject>
    <label>Sales Forecast Detail</label>
    <nameField>
        <displayFormat>SFD-{000000}</displayFormat>
        <label>Sales Forcast Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>