force-app/main/default/objects/Sales_Forcast__c/fields/Achievement_Rate_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Rate_Local_Currency__c</fullName>
    <formula>IF(Monthly_Forecast_Local_Curreny__c=0,1,Monthly_Actual_Local_Currency__c/ Monthly_Forecast_Local_Curreny__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievement Rate (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>