force-app/main/default/objects/Sales_Forcast__c/fields/Achievement_Rate_USD__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Rate_USD__c</fullName>
    <formula>IF( Monthly_Forecast_USD__c=0, 1,Monthly_Actual_USD__c/Monthly_Forecast_USD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievement Rate (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>