force-app/main/default/objects/Sales_Forcast__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <formula>IF(AND( TEXT(Month__c)= TEXT(MONTH(TODAY())) ,TEXT(Year__c)=Text(YEAR(TODAY()))),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Checkbox</type>
</CustomField>