force-app/main/default/objects/Sales_Forcast__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Forcast</relationshipName>
    <type>Lookup</type>
</CustomField>