force-app/main/default/objects/Sales_Forcast__c/fields/Customer_Sales_View__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_View__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Sales View</label>
    <referenceTo>Customer_Sales_Info__c</referenceTo>
    <relationshipName>Sales_Forcast</relationshipName>
    <type>Lookup</type>
</CustomField>