force-app/main/default/objects/Sales_Forcast__c/fields/Delivery_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Plant__c</fullName>
    <formula>TEXT(Sales_Forecast_Summary__r.Delivery_Plant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Plant</label>
    <type>Text</type>
</CustomField>