force-app/main/default/objects/Sales_Forcast__c/fields/Difference_Per_Month_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Difference_Per_Month_Local_Currency__c</fullName>
    <formula>Monthly_Forecast_Local_Curreny__c - Monthly_Actual_Local_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Per Month (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>