force-app/main/default/objects/Sales_Forcast__c/fields/Last_Year_Monthly_Actual_USD__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Monthly_Actual_USD__c</fullName>
    <label>Last Year Monthly Actual (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>