force-app/main/default/objects/Sales_Forcast__c/fields/Month_Data__c.field-meta.xml
<CustomField>
    <fullName>Month_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Month Data</label>
    <referenceTo>Month_Data__c</referenceTo>
    <relationshipLabel>Sales Forecast Detail</relationshipLabel>
    <relationshipName>Sales_Forecast_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>