force-app/main/default/objects/Sales_Forcast__c/fields/Monthly_Actual_USD__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Actual_USD__c</fullName>
    <label>Monthly Actual (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>