force-app/main/default/objects/Sales_Forcast__c/fields/Monthly_Forecast_Local_Curreny__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Forecast_Local_Curreny__c</fullName>
    <label>Monthly Forecast (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>