force-app/main/default/objects/Sales_Forcast__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipName>Sales_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>