force-app/main/default/objects/Sales_Forcast__c/fields/Rolling_Difference_Per_Month_Local_Curr__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Difference_Per_Month_Local_Curr__c</fullName>
    <formula>Rolling_Monthly_Forecast_Local_Currency__c - Monthly_Forecast_Local_Curreny__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rolling Difference (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>