force-app/main/default/objects/Sales_Forcast__c/fields/Rolling_Difference_Per_Month_USD__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Difference_Per_Month_USD__c</fullName>
    <formula>Rolling_Monthly_Forecast_USD__c - Monthly_Actual_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rolling Difference Per Month (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>