force-app/main/default/objects/Sales_Forcast__c/fields/Rolling_Monthly_Forecast_USD__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Monthly_Forecast_USD__c</fullName>
    <label>Rolling Monthly Forecast (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>