force-app/main/default/objects/Sales_Forcast__c/fields/Sales_Forecast_Summary__c.field-meta.xml
<CustomField>
    <fullName>Sales_Forecast_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Forecast Summary</label>
    <referenceTo>Sales_Forecast_Summary__c</referenceTo>
    <relationshipLabel>Sales Forecast Detail</relationshipLabel>
    <relationshipName>Sales_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>