force-app/main/default/objects/Sales_Forcast__c/fields/Volumn_Local__c.field-meta.xml
<CustomField>
    <fullName>Volumn_Local__c</fullName>
    <label>Volumn (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>