force-app/main/default/objects/Sales_Forcast__c/fields/YOY__c.field-meta.xml
<CustomField>
    <fullName>YOY__c</fullName>
    <formula>IF(OR(ISBLANK(Last_Year_Monthly_Actual_USD__c ),ISBLANK(Monthly_Actual_USD__c )) ,0,(Monthly_Actual_USD__c - Last_Year_Monthly_Actual_USD__c)/Last_Year_Monthly_Actual_USD__c)</formula>
    <label>YOY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>