force-app/main/default/objects/Sales_Forcast__c/recordTypes/Detail_Sales_Forecast.recordType-meta.xml
<RecordType>
    <fullName>Detail_Sales_Forecast</fullName>
    <active>true</active>
    <label>Sales Forecast Detail</label>
</RecordType>