force-app/main/default/objects/Sales_Forcast__c/recordTypes/Total_Sales_Forecast.recordType-meta.xml
<RecordType>
    <fullName>Total_Sales_Forecast</fullName>
    <active>true</active>
    <label>Total Sales Forecast(DELETE)</label>
</RecordType>