force-app/main/default/objects/Sales_Forcast__c/validationRules/Product_Delete.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Delete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW() ,Product_Name__r.Is_Delete__c )</errorConditionFormula>
    <errorDisplayField>Product_Name__c</errorDisplayField>
    <errorMessage>Product Name Deteled</errorMessage>
</ValidationRule>